fix: text align center banner

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ img {
     color: white;
     font-weight: 500;
     margin: 10px 10px;
+    text-align: center;
 }
 
 header ul,
